fix footer menu spacing

--- a/styles/sass/_footer.sass
+++ b/styles/sass/_footer.sass
@@ -8,6 +8,9 @@ footer
     @media #{$tablet}
         flex-wrap: wrap
         padding: 3%
+    ul
+    	margin: 0
+    	padding: 0
     li
         list-style: none
         display: inline-block
